# vsclib

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  default.nix  flake.nix
.github/workflows/: build.yml
tests/: CMakeLists.txt  colour.cpp  common.hpp  hash.cpp  hashmap.cpp  io.cpp  memory.cpp  resource.cpp  strerror.c  string.cpp  time.cpp  uuid.cpp  wav.cpp
vsclib/: CMakeLists.txt  allocator.c  allocator.cpp  allocator_internal.h  allocator_internal.hpp  allocator_mingw.c  allocator_win32.c  chdir.c  colour.c  crc32.c  cstrtowstr_win32.c  ctz.c  enum_groups.c  error.c  file.c  file_stdio.c  fixed.c  fnullify.c  fopena.c  for_each.c  freadall.c  getline.c  hash.c  hashmap.c  memory.c  mingw-aligned-malloc.c  mingw-aligned-malloc.h  resource.c  searchpath.c  searchpath_win32.c  stdio.c  stpcpy.c  strcpy.c  strdup.c  strdupr.c  string.c  strjoin.c  sysmem.c  time.c  util_win32.c  (+8 more)
vsclib/include/: vsclib.h
vsclib/include/vsclib/: assert.h  colour.h  colourdef.h  enum_groups.h  error.h  file.h  file_internal.h  file_stdio.h  filedef.h  fixed.h  fixeddef.h  hash.h  hashdef.h  hashmap.h  hashmapdef.h  io.h  iodef.h  macros.h  mem.h  memdef.h  platform.h  resource.h  resourcedef.h  string.h  stringdef.h  time.h  timedef.h  types.h  uuid.h  uuiddef.h  wav.h
vscpplib/: CMakeLists.txt  colour.cpp  vscpplib.cpp  vscpplib.hpp
vscpplib/include/: vscpplib.hpp
